# craft-ai-cli

./: .gitignore  README.md  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  update_docs.py
cli/: craft_ai_cli.py  deployments.py  environment.py  executions.py  misc.py  pipelines.py  profiles.py
craft_ai_cli/cli/: craft_ai_cli.py  deployments.py  environment.py  executions.py  misc.py  pipelines.py  profiles.py
craft_ai_cli/utils/: __init__.py  context.py  custom_help_formatter.py  tabulize.py  test_parse_payload.py
scripts/: generate_shell_integration.py  update_docs.py
utils/: __init__.py  context.py  custom_help_formatter.py  parse_payload.py  tabulize.py  test_parse_payload.py  utils.py
